--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
+  "engines": {
+      "npm":"6.4.1",
+      "node":"10.15.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
